<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:background="@color/darkGrey">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="120dp">

            <TextView
                android:id="@+id/audioSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audioText"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/audioRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/audio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aRadio1"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/audio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aRadio2"
                    android:textColor="@color/white" />

            </RadioGroup>

            <Switch
                android:id="@+id/audioOffOnSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audioSwitchTextOn"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mazeSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mazeText"
                android:textColor="@color/white"
                android:layout_marginTop="35dp"/>

            <RadioGroup
                android:id="@+id/mazeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/maze1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mRadio1"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/maze2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mRadio2"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/maze3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mRadio3"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/maze4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mRadio4"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/maze5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mRadio5"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/maze6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mRadio6"
                    android:textColor="@color/white" />

            </RadioGroup>

            <TextView
                android:id="@+id/nameSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameText"
                android:textColor="@color/white"
                android:layout_marginTop="35dp"/>

            <EditText
                android:id="@+id/editPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/dirtyWhite"
                android:background="@color/midGrey"/>

            <!--<TextView
                android:id="@+id/mqttSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mqttText" />-->

            <Switch
                android:id="@+id/RaspberrySmartphoneSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raspberrySwitchTextOff"
                android:textColor="@color/white"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/ipAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipAddressText"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/setIPAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/raspberryIP"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/dirtyWhite"
                android:background="@color/midGrey"/>

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="30dp"
                android:text="@string/saveSettings"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>